--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.METRIC_TOKEN }}
           base: ""
           plugin_activity: yes
           plugin_activity_limit: 5
