--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,26 +1,31 @@
-# .github/workflows/snake.yml
-
 name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Runs every day at midnight
+    - cron: "0 0 * * *"  # Runs daily at midnight
   workflow_dispatch:
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Generate snake.svg
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Fix for "not a git repository" error
+
+      - name: Generate GitHub contribution snake
         uses: Platane/snk@v3
         with:
           github_user_name: samnjoro30
           outputs: |
             ./github-contribution-grid-snake.svg
             ./github-contribution-grid-snake-dark.svg?palette=github-dark
-      - name: Push to GitHub
+
+      - name: Push the generated files
         uses: EndBug/add-and-commit@v9
         with:
-          author_name: GitHub Actions
-          author_email: actions@github.com
-          message: "Generate contribution graph"
+          author_name: github-actions
+          author_email: github-actions@github.com
+          message: "chore: generate contribution graph snake 🐍"
